test/Fail/Issue6654c.err
Issue6654c.agda:1,1-67: error: [SafeFlagPragma]
Cannot set OPTIONS pragmas
--large-indices and --forced-argument-recursion with safe flag.
